@@ -24,3 +24,5 @@ int main()
 {
   g({1});			// { dg-warning "deduc" }
 }
+
+// { dg-prune-output "-fno-deduce-init-list" }
