@@ -1,11 +1,11 @@
 // PR c++/5247
 
 template<typename T>
-int foo (T t, int = foo(T()));
+int foo (T t, int = foo(T()));	// { dg-error "recursive" }
 
 struct A { };
 
 int main()
 {
-  foo(A());			// { dg-error "default argument" }
+  foo(A());			// { dg-message "default argument" }
 }
