@@ -1,8 +1,10 @@
 // PR c++/34397
 
-template<typename T, int = T()[0]> struct A // { dg-error "subscripted|template" }
+template<typename T, int = T()[0]> struct A // { dg-error "subscripted" }
 {
   typedef A<T> B;
 };
 
 A<int> a; // { dg-error "declaration" }
+
+// { dg-prune-output "template argument 2 is invalid" }
